[package]
edition = "2021"
name = "picobell"
version = "0.1.0"
authors = ["Frederik Walk <rust@walk.onl>"]
resolver = "2"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.5"

embassy-executor = { version = "0.7", features = [
    "task-arena-size-1024",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "executor-interrupt",
] }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-futures = { version = "0.1" }

cortex-m = { version = "0.7.7" }
embassy-rp = { version = "0.3", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }

pio-proc = { version = "0.2" }
pio = { version = "0.2" }
fixed = { version = "1.28" }
arbitrary-int = { version = "1.3", features = ["defmt"] }
thiserror = { version = "2", default-features = false }
assign-resources = { version = "0.4" }
smart-leds = { version = "0.4" }
